force-app/main/default/objects/DHS_Message__c/fields/Case_Message__c.field-meta.xml
<CustomField>
    <fullName>Case_Message__c</fullName>
    <displayFormat>Message#{0000000}</displayFormat>
    <label>Case Message#</label>
    <type>AutoNumber</type>
</CustomField>