force-app/main/default/objects/DHS_Message__c/fields/DHS_CC_User__c.field-meta.xml
<CustomField>
    <fullName>DHS_CC_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CC User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>DHS_Messages2</relationshipName>
    <type>Lookup</type>
</CustomField>