force-app/main/default/objects/DHS_Message__c/fields/DHS_From_User__c.field-meta.xml
<CustomField>
    <fullName>DHS_From_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>From User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>DHS_From_User_Messages</relationshipName>
    <type>Lookup</type>
</CustomField>