force-app/main/default/objects/DHS_Message__c/fields/DHS_To_User__c.field-meta.xml
<CustomField>
    <fullName>DHS_To_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>To User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>DHS_Messages1</relationshipName>
    <type>Lookup</type>
</CustomField>