force-app/main/default/objects/DHS_Message__c/fields/Mark_as_Important__c.field-meta.xml
<CustomField>
    <fullName>Mark_as_Important__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mark as Important</label>
    <type>Checkbox</type>
</CustomField>