force-app/main/default/objects/DHS_Message__c/fields/Message_Date__c.field-meta.xml
<CustomField>
    <fullName>Message_Date__c</fullName>
    <formula>TEXT(MONTH(DATEVALUE(CreatedDate))) &amp; &quot;/&quot; &amp; TEXT(DAY(DATEVALUE(CreatedDate))) &amp; &quot;/&quot; &amp; TEXT(YEAR(DATEVALUE(CreatedDate))) &amp; &quot;, &quot;
&amp;
IF( 
OR( 
 VALUE( MID( TEXT( CreatedDate - (4/24)), 12, 2 ) ) = 0, 
 VALUE( MID( TEXT( CreatedDate - (4/24) ), 12, 2 ) ) = 12 
), 
  &quot;12&quot;, 
 TEXT( VALUE( MID( TEXT( CreatedDate - (4/24) ), 12, 2 ) ) 
 - 
IF( 
VALUE( MID( TEXT( CreatedDate - (4/24)), 12, 2 ) ) &lt; 12, 
  0, 
  12 
  ) 
 ) 
) 
&amp; &quot;:&quot; &amp; 
MID( TEXT( CreatedDate - (4 /24)), 15, 2 ) 
&amp; &quot;:&quot; &amp; 
MID( TEXT( CreatedDate - (4/24) ), 18, 2 ) 
&amp; &quot; &quot; &amp; 
IF( 
 VALUE( MID( TEXT( CreatedDate - (4/24)), 12, 2 ) ) &lt; 12, 
 &quot;AM&quot;, 
 &quot;PM&quot; 
) &amp; &quot; EST&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Message Date</label>
    <type>Text</type>
</CustomField>