force-app/main/default/objects/DHS_Message__c/fields/Message_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>Message_Modified_Date__c</fullName>
    <formula>TEXT(MONTH(DATEVALUE(LastModifiedDate))) &amp; &quot;/&quot; &amp; TEXT(DAY(DATEVALUE(LastModifiedDate))) &amp; &quot;/&quot; &amp; TEXT(YEAR(DATEVALUE(LastModifiedDate))) &amp; &quot;, &quot;
&amp;
IF(
OR(
VALUE( MID( TEXT( LastModifiedDate - (4/24)), 12, 2 ) ) = 0,
VALUE( MID( TEXT( LastModifiedDate - (4/24) ), 12, 2 ) ) = 12
),
&quot;12&quot;,
TEXT( VALUE( MID( TEXT( LastModifiedDate - (4/24) ), 12, 2 ) )
-
IF(
VALUE( MID( TEXT( LastModifiedDate - (4/24)), 12, 2 ) ) &lt; 12,
0,
12
)
)
)
&amp; &quot;:&quot; &amp;
MID( TEXT( LastModifiedDate - (4 /24)), 15, 2 )
&amp; &quot;:&quot; &amp;
MID( TEXT( LastModifiedDate - (4/24) ), 18, 2 )
&amp; &quot; &quot; &amp;
IF(
VALUE( MID( TEXT( LastModifiedDate - (4/24)), 12, 2 ) ) &lt; 12,
&quot;AM&quot;,
&quot;PM&quot;
) &amp; &quot; EST&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Message Modified Date</label>
    <type>Text</type>
</CustomField>