force-app/main/default/objects/DHS_Message__c/fields/MessageCreatedDate__c.field-meta.xml
<CustomField>
    <fullName>MessageCreatedDate__c</fullName>
    <formula>DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MessageCreatedDate</label>
    <type>Date</type>
</CustomField>