force-app/main/default/objects/DHS_Message__c/listViews/DHS_All.listView-meta.xml
<ListView>
    <fullName>DHS_All</fullName>
    <columns>NAME</columns>
    <columns>Subject__c</columns>
    <columns>DHS_From_User__c</columns>
    <columns>DHS_To_User__c</columns>
    <columns>Read__c</columns>
    <columns>UnRead__c</columns>
    <filterScope>Everything</filterScope>
    <label>DHS_All</label>
</ListView>